# imapmaildir

./: .gitignore  .gitleaksignore  CHANGELOG.md  Cargo.toml  README.md  db.sqbpro  flake.nix  module.nix  release-plz.toml  renovate.json
.config/: nextest.toml
.github/workflows/: commitlint.yml  deploy.yml  release.yml  rust.yml
migrations/001-initial/: up.sql
mock/: certificate.crt  dovecot.conf  keystore.p12
mock/data/user@localhost/INBOX/: 1.eml  3.eml
nix/: module.nix  package.nix
src/: client.rs  config.rs  lib.rs  mailbox.rs  maildir.rs  main.rs  mock_server.rs  nuke.rs  parser.rs  state.rs  sync.rs
src/cli/: mod.rs  nuke.rs  sync.rs
src/client/: codec.rs  connection.rs  mailbox.rs  mod.rs  parser.rs  response_stream.rs  session.rs  tag_generator.rs
src/client/clients/: client.rs  mod.rs  session.rs
src/client/connection/: codec.rs  connection.rs  mod.rs  response_stream.rs  tag_generator.rs
src/client/parser/: mod.rs  spec.rs
src/config/: account.rs  auth.rs  imapmaildir.rs  mod.rs
src/imap/: client.rs  codec.rs  connection.rs  imap_repository.rs  imap_state.rs  mailbox.rs  mod.rs  remote_changes.rs  remote_mail.rs  tag_generator.rs
src/imap/client/: authenticated.rs  capability.rs  client.rs  mod.rs  not_authenticated.rs  selected.rs  session.rs
src/imap/client/auth/: authenticator.rs  client.rs  mod.rs
src/imap/client/commands/: mod.rs  select.rs
src/imap/client/mail/: fetch.rs  idle.rs  mailbox.rs  mod.rs  select.rs  session.rs
src/imap/connection/: codec.rs  connection.rs  mock_connection.rs  mod.rs  response_stream.rs  send_command.rs  tag_generator.rs
src/imap/mailbox/: mailbox.rs  mod.rs  modseq.rs  remote_mail.rs  sequence_set.rs  uid.rs  uid_validity.rs
src/imap/transport/: connection.rs  mod.rs  tag_generator.rs
src/imap_old/client/mail/: fetch.rs  idle.rs  mod.rs  session.rs
src/logging/: connected_to_journal.rs  mod.rs
src/maildir/: local_changes.rs  local_mail.rs  maildir.rs  maildir_repository.rs  mod.rs  state.rs  watcher.rs
src/parser/: mod.rs
src/repository/: flag.rs  local_changes.rs  mailbox.rs  mailbox_metadata.rs  mod.rs  modseq.rs  remote_mail.rs  sequence_set.rs  uid.rs  uid_validity.rs
src/sync/: change_hook.rs  mod.rs  repository.rs  syncer.rs  task.rs
tests/: continuous.rs  integration.rs  once.rs
tests/fixtures/: mod.rs
tests/fixtures/mock/: dovecot.conf
tests/mock/: private_key.pem
(+7 files in other folders)
