[package]
name = "imapmaildir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
imap-proto = "0.16.5"
nom = "7"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.14", features = ["codec"] }
toml = "0.8.19"
