[package]
name = "imapmaildir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
derive-getters = "0.5.0"
derive_builder = "0.20.2"
env_logger = "0.11.8"
futures = "0.3.31"
imap-proto = "0.16.5"
log = { version = "0.4.27", features = ["kv", "release_max_level_debug", "std"] }
nom = "7"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustix = { version = "1.0.5", features = ["fs", "std", "system"], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "macros", "net"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.14", features = ["codec"] }
toml = "0.8.19"

[lints.clippy]
pedantic = {level = "warn", priority = -2}
allow_attributes = "warn"
